# ADO-Development-Intel-App

./: .env.example  .gitignore  Project-Design.md  README.md  angular.json  mock-endpoint-capabilities.md  mockoon-data.json  needed-endpoint.md  package-lock.json  package.json
src/: main.ts  styles.ado-overrides.scss  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  work_item_transitions.rs
src/app/: app.component.css  app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
src/app/mainframe/: mainframe.component.html  mainframe.component.scss  mainframe.component.ts
src/app/mainframe/ado-tab/: ado-tab.component.html  ado-tab.component.scss  ado-tab.component.ts
src/app/mainframe/pipelines-tab/: pipelines-tab.component.html  pipelines-tab.component.scss  pipelines-tab.component.ts
src/app/mainframe/repos-tab/: repos-tab.component.html  repos-tab.component.scss  repos-tab.component.ts
src/app/mainframe/user-tab/: user-tab.component.html  user-tab.component.scss  user-tab.component.ts
src/app/services/: README.md
src/app/services/ado/: ado-api-base.service.ts  work-items.service.ts
src/app/services/core/: ado-auth.service.ts  error-handler.service.ts  http-client.service.ts  loading.service.ts
src/app/services/interceptors/: auth.interceptor.ts  error.interceptor.ts  loading.interceptor.ts
src/app/services/mock/: mock-work-items.service.ts
src/app/services/models/: auth.interface.ts  (+1 more)
src/environments/: environment.prod.ts  environment.ts
(+80 files in other folders)
